--- a/phantom/815/index.html
+++ b/phantom/815/index.html
@@ -44,7 +44,7 @@
 </head>
 <body>
   <h1>LINEAGE 掉落查詢</h1>
-  <input type="text" id="keyword" placeholder="請輸入備註文字（note）">
+  <input type="text" id="keyword" placeholder="請輸入關鍵字 (物品或怪物)">
   <button onclick="search()">查詢</button>
 
   <div id="result"></div>
