--- a/phantom/815/Notice.html
+++ b/phantom/815/Notice.html
@@ -2,113 +2,106 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8">
-  <title>公告列表</title>
+  <title>新聞公告</title>
   <style>
     body {
-      background-color: #111;
+      background-color: #000;
       font-family: "微軟正黑體", sans-serif;
-      color: #fff;
-      padding: 20px;
-    }
-
-    .tabs {
+      color: #ffcc66;
       display: flex;
-      gap: 20px;
-      border-bottom: 1px solid #666;
-      margin-bottom: 15px;
-    }
-
-    .tabs div {
-      padding: 10px 15px;
-      cursor: pointer;
-      color: #ccc;
-    }
-
-    .tabs div:hover,
-    .tabs .active {
-      color: #fff;
-      border-bottom: 2px solid orange;
-    }
-
-    .notice-list {
-      list-style: none;
-      padding: 0;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
       margin: 0;
     }
 
-    .notice-item {
-      display: flex;
-      justify-content: space-between;
-      padding: 8px 0;
-      border-bottom: 1px dotted #444;
-      font-size: 15px;
+    .announcement-box {
+      background-color: #1c1c1c;
+      width: 400px;
+      border: 2px solid #333;
+      padding: 10px;
+      box-shadow: 0 0 10px #000;
     }
 
-    .notice-title {
-      color: #eee;
+    .header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background-color: #333;
+      color: #ffcc00;
+      padding: 5px 10px;
+      font-size: 16px;
+      font-weight: bold;
+      border-bottom: 1px solid #555;
+    }
+
+    .header .server {
+      color: #ffaa00;
+      font-size: 14px;
+      font-weight: normal;
+    }
+
+    .announcement-list {
+      margin-top: 10px;
+    }
+
+    .announcement-item {
+      display: flex;
+      justify-content: space-between;
+      padding: 5px 0;
+      border-bottom: 1px dotted #444;
+      font-size: 14px;
+      color: #cccccc;
+    }
+
+    .announcement-item:hover {
+      color: #ffcc00;
       cursor: pointer;
     }
 
-    .notice-title:hover {
-      color: #ffcc00;
+    .title {
+      flex: 1;
     }
 
-    .notice-date {
-      color: #aaa;
-      font-size: 13px;
+    .date {
+      color: #888;
+      font-size: 12px;
       white-space: nowrap;
-      padding-left: 10px;
+      margin-left: 10px;
     }
   </style>
 </head>
 <body>
 
-  <div class="tabs">
-    <div class="active">最新</div>
-    <div>遊戲</div>
-    <div>公告</div>
-    <div>活動</div>
-    <div style="margin-left:auto;">more</div>
-  </div>
+  <div class="announcement-box">
+    <div class="header">
+      <div>新聞公告</div>
+      <div class="server">不專業天堂</div>
+    </div>
 
-  <ul class="notice-list">
-    <li class="notice-item">
-      <div class="notice-title">[重要公告] 測試</div>
-      <div class="notice-date">05-26</div>
-    </li>
-    <li class="notice-item">
-      <div class="notice-title">[活動列表]測試</div>
-      <div class="notice-date">05-14</div>
-    </li>
-    <li class="notice-item">
-      <div class="notice-title">[重要公告] 測試</div>
-      <div class="notice-date">05-24</div>
-    </li>
-    <li class="notice-item">
-      <div class="notice-title">[重要公告] 測試</div>
-      <div class="notice-date">05-23</div>
-    </li>
-    <li class="notice-item">
-      <div class="notice-title">[活動列表] 測試</div>
-      <div class="notice-date">05-23</div>
-    </li>
-    <li class="notice-item">
-      <div class="notice-title">[重要公告] 測試</div>
-      <div class="notice-date">05-22</div>
-    </li>
-    <li class="notice-item">
-      <div class="notice-title">[特殊道具] 測試</div>
-      <div class="notice-date">05-22</div>
-    </li>
-    <li class="notice-item">
-      <div class="notice-title">[遊戲下載] 測試</div>
-      <div class="notice-date">05-20</div>
-    </li>
-    <li class="notice-item">
-      <div class="notice-title">[遊戲下載] 測試</div>
-      <div class="notice-date">05-20</div>
-    </li>
-  </ul>
+    <div class="announcement-list">
+      <div class="announcement-item">
+        <div class="title">[公告] 版本資訊</div>
+        <div class="date">標題時間</div>
+      </div>
+      <div class="announcement-item">
+        <div class="title">[公告] 公告標題</div>
+        <div class="date">標題時間</div>
+      </div>
+      <div class="announcement-item">
+        <div class="title">[公告] 公告標題</div>
+        <div class="date">標題時間</div>
+      </div>
+      <div class="announcement-item">
+        <div class="title">[公告] 公告標題</div>
+        <div class="date">標題時間</div>
+      </div>
+      <div class="announcement-item">
+        <div class="title">[公告] 公告標題</div>
+        <div class="date">標題時間</div>
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
