--- a/phantom/815/Notice.html
+++ b/phantom/815/Notice.html
@@ -11,7 +11,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 90vh;
+      height: 100vh;
       margin: 0;
     }
 
@@ -29,20 +29,20 @@
       align-items: center;
       background-color: #333;
       color: #ffcc00;
-      padding: 5px 12px;
-      font-size: 12px;
+      padding: 5px 10px;
+      font-size: 16px;
       font-weight: bold;
       border-bottom: 1px solid #555;
     }
 
     .header .server {
       color: #ffaa00;
-      font-size: 10px;
+      font-size: 14px;
       font-weight: normal;
     }
 
     .announcement-list {
-      margin-top: 12px;
+      margin-top: 10px;
     }
 
     .announcement-item {
@@ -50,7 +50,7 @@
       justify-content: space-between;
       padding: 5px 0;
       border-bottom: 1px dotted #444;
-      font-size: 12px;
+      font-size: 14px;
       color: #cccccc;
     }
 
@@ -67,13 +67,13 @@
       color: #888;
       font-size: 12px;
       white-space: nowrap;
-      margin-left: 13px;
+      margin-left: 10px;
     }
   </style>
 </head>
 <body>
       <div class="announcement-item">
-        <div class="title">[公告] 版本資訊</div>
+        <div class="title">[公告] 版本資訊Byywc8888</div>
         <div class="date">標題時間</div>
       </div>
       <div class="announcement-item">
