--- a/phantom/815/Notice2.html
+++ b/phantom/815/Notice2.html
@@ -73,7 +73,7 @@
 </head>
 <body>
       <div class="announcement-item">
-        <div class="title">[公告] 版本資訊Byywc8888</div>
+        <div class="title">[公告] 版本資訊</div>
         <div class="date">標題時間</div>
       </div>
       <div class="announcement-item">
